# kubara

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  INSTALLATION.md  LICENSE-docs  Makefile  NOTICE.md  NOTICE.txt  README.md  SECURITY.md  THIRD_PARTY_HELM_DEPENDENCIES.md  index.html  install.sh  latest-stable  llms.txt  preview  renovate.json  versions.json
docs/: .gitignore  Makefile  Pipfile  README.md  mkdocs.yml  pyproject.toml
docs/content/: index.md
docs/content/10_decisions/: ADR-0003-versioned-per-cluster-catalogs.md  ADR-index.md
docs/content/1_getting_started/: bootstrap_process.md  bootstrapping.md  catalogs.md  commands.md  installation.md  overview_core_concept.md  prerequisites.md  quick_start.md
docs/content/2_concepts/: catalog_distribution.md  catalog_templating.md  catalogs.md  gitops_platform_engineering_idp.md  overview_core_concept.md  scale_and_ha.md
docs/content/2_managing_your_platform/: add_app_project.md  add_app_repository.md  add_application.md  add_appset.md  add_spoke_cluster.md  add_sso.md  add_sso_examples.md  add_worker_cluster.md  create_catalog.md
docs/content/3_building_your_platform/: create_catalog.md
docs/content/3_components/: add_or_replace_components.md  backup_and_recovery.md  components_overview.md  network_external_dns.md  observability_alerts.md  observability_dashboards.md  observability_logs.md  observability_metrics.md  security_certificates.md
docs/hooks/: agent_docs.py
docs/overrides/: main.html
docs/scripts/: build_root_llms.py
src/: go.mod  (+3 more)
(+1308 files in other folders)
