[project]
name = "docs"
version = "0.1.0"
description = "Documentation for kubara"
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "mike",
    "mkdocs",
    "mkdocs-material",
    "mkdocs-plugin-open-external-links-in-new-tab @ git+https://github.com/z-aki/mkdocs-plugin-open-external-links-in-new-tab@5ef62b9"
]
